# examples-stm32

./: .gitignore  .gitmodules  .mxproject  .mxproject.minimal.backup  .project  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  SESSION_SUMMARY.md  STM32F746XX_FLASH.ld  app_commands.txt  build_all_apps.sh  dip-vs.ioc  histogram_output.csv  run_app_commands.sh  test_app_flow.sh
.ai/: camvid_int8_camvid_int8.tflite_c_info.json  cnn_mnist_cnn_mnist_best.tflite_c_info.json  mobilenet_horse_fp32_mobilenet_horse_fp32.tflite_c_info.json  mobilenetv2_fp32_mobilenetv2_fp32.tflite_c_info.json  nn_mnist_best_mnist_model.tflite_c_info.json  unet_fp32_unet_fp32.tflite_c_info.json
.claude/: settings.json
.github/workflows/: README.md  build-all-apps.yml  build-and-release.yml  build.yml  code-quality.yml
Core/Inc/: compress.h  image_data.h  image_data_rgb.h  image_data_rgb565.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: compress.c  differ.py  main.c  main.c.backup.20260411_003632  main.c.backup.20260422_230427  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c  sysmem.c  system_stm32f7xx.c
CoreCPP/Inc/: cnn_mnist_inference.h  main.hpp  mnist_inference.h
CoreCPP/Src/: 01_unet_fp32.tflite  02_unet_s_fp32.tflite  03_mobilenet_fp32.tflite  Chapter4_Application.cpp  Chapter5_Application_Single_Image_Multi_Res_Application.cpp  Chapter5_Camera_Acquisition.cpp  camvid_int8.tflite  camvid_model_data.cc  camvid_model_data.h  cnn_mnist.tflite  cnn_mnist_model_data.h  main.cpp  main.cpp.backup.20260411_164238  main.cpp.backup.20260411_164815  main_tlfm_camvid.cpp  main_tlfm_classification.cpp  main_tlfm_segmentation.cpp  mnist_inference.cpp  mnist_model_data.cc  mnist_model_data.h  mobilenet_model_data.cc  mobilenet_model_data.h  nn_mnist.tflite  nn_mnist_model_data.cc  nn_mnist_model_data.h  tlfm_camvid.cpp  tlfm_classification.cpp  tlfm_segmentation.cpp  unet_model_data.cc  unet_model_data.h  unet_s_model_data.cc  unet_s_model_data.h
Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_sdram.c  stm32746g_discovery_sdram.h
Drivers/CMSIS/Include/: cmsis_compiler.h  core_armv8mml.h  core_cm0.h  core_cm23.h  core_cm33.h  core_cm4.h  core_cm7.h
Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h  stm32f7xx_hal_cortex.h  stm32f7xx_hal_dcmi.h  stm32f7xx_hal_def.h  stm32f7xx_hal_dma.h  stm32f7xx_hal_dma2d.h  stm32f7xx_hal_dma_ex.h  stm32f7xx_hal_dsi.h  stm32f7xx_hal_exti.h  stm32f7xx_hal_flash.h  stm32f7xx_hal_flash_ex.h  stm32f7xx_hal_gpio.h  stm32f7xx_hal_gpio_ex.h  stm32f7xx_hal_i2c.h  stm32f7xx_hal_i2c_ex.h  stm32f7xx_hal_ltdc.h  stm32f7xx_hal_ltdc_ex.h  stm32f7xx_hal_nand.h  stm32f7xx_hal_nor.h  stm32f7xx_hal_pwr.h  stm32f7xx_hal_pwr_ex.h  stm32f7xx_hal_rcc.h  stm32f7xx_hal_rcc_ex.h  stm32f7xx_hal_sdram.h  stm32f7xx_hal_sram.h  stm32f7xx_hal_uart.h  stm32f7xx_hal_uart_ex.h  stm32f7xx_ll_bus.h  stm32f7xx_ll_cortex.h  stm32f7xx_ll_dma.h  stm32f7xx_ll_dma2d.h  stm32f7xx_ll_exti.h  stm32f7xx_ll_fmc.h  stm32f7xx_ll_gpio.h  stm32f7xx_ll_i2c.h  stm32f7xx_ll_pwr.h  stm32f7xx_ll_rcc.h  stm32f7xx_ll_system.h  stm32f7xx_ll_usart.h  stm32f7xx_ll_utils.h
Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c  stm32f7xx_hal_cortex.c  stm32f7xx_hal_dcmi.c  stm32f7xx_hal_dma.c  stm32f7xx_hal_dma2d.c  stm32f7xx_hal_dma_ex.c  stm32f7xx_hal_dsi.c  stm32f7xx_hal_exti.c  stm32f7xx_hal_flash.c  stm32f7xx_hal_flash_ex.c  stm32f7xx_hal_gpio.c  stm32f7xx_hal_i2c.c  stm32f7xx_hal_i2c_ex.c  stm32f7xx_hal_ltdc.c  stm32f7xx_hal_ltdc_ex.c  stm32f7xx_hal_nand.c  stm32f7xx_hal_nor.c  stm32f7xx_hal_pwr.c  stm32f7xx_hal_pwr_ex.c  stm32f7xx_hal_rcc.c  stm32f7xx_hal_rcc_ex.c  stm32f7xx_hal_sdram.c  stm32f7xx_hal_sram.c  stm32f7xx_hal_uart.c  stm32f7xx_hal_uart_ex.c  stm32f7xx_ll_fmc.c
Inc/: libjpeg.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
LIBJPEG/App/: libjpeg.c  libjpeg.h
Src/: dcmi.c  dma.c  dma2d.c  fmc.c  gpio.c  i2c.c  libjpeg.c  ltdc.c  main.c  stm32f7xx_it.c  usart.c
X-CUBE-AI/App/: camvid_int8.c  camvid_int8.h  camvid_int8_config.h  camvid_int8_data.c  camvid_int8_data.h  camvid_int8_data_params.c  camvid_int8_data_params.h  camvid_int8_generate_report.txt  cnn_mnist.c  cnn_mnist.h  cnn_mnist_config.h  cnn_mnist_data.c  cnn_mnist_data.h  cnn_mnist_data_params.c  cnn_mnist_data_params.h  cnn_mnist_generate_report.txt  mobilenet_horse_fp32.c  mobilenet_horse_fp32.h  mobilenet_horse_fp32_config.h  mobilenet_horse_fp32_data.c  mobilenet_horse_fp32_data.h  mobilenet_horse_fp32_data_params.c  mobilenet_horse_fp32_data_params.h  mobilenet_horse_fp32_generate_report.txt  mobilenetv2_fp32.c  mobilenetv2_fp32.h  mobilenetv2_fp32_config.h  mobilenetv2_fp32_data.c  mobilenetv2_fp32_data.h  mobilenetv2_fp32_data_params.c  mobilenetv2_fp32_data_params.h  mobilenetv2_fp32_generate_report.txt  nn_mnist.c  nn_mnist.h  nn_mnist_config.h  nn_mnist_data.c  nn_mnist_data.h  nn_mnist_data_params.c  nn_mnist_data_params.h  nn_mnist_generate_report.txt  (+8 more)
apps/: Listing10_1.c  Listing10_10.cpp  Listing10_11.c  Listing10_12.cpp  Listing10_2.cpp  Listing10_3.c  Listing10_4.cpp  Listing10_5.c  Listing10_6.cpp  Listing10_7.c  Listing10_8.cpp  Listing10_9.c  Listing12_12.c  Listing12_12.cpp  Listing12_13.cpp  Listing12_14.cpp  Listing12_21.cpp  Listing13_12.c  Listing13_13.cpp  Listing13_14.cpp  Listing14_10.cpp  Listing14_11.c  Listing14_11.cpp  Listing14_12.c  Listing14_12.cpp  Listing14_13.cpp  Listing14_16.c  Listing14_17.cpp  Listing14_4.c  Listing14_5.cpp  Listing14_6.cpp  Listing14_7.c  Listing14_8.cpp  Listing14_9.c  Listing3_1.c  Listing3_2.cpp  Listing4_10.cpp  Listing4_12.cpp  Listing4_2.c  Listing4_3.cpp  (+230 more)
apps/build_outputs/: BUILD_SUMMARY.txt
apps/build_outputs/Listing12_12.c/: build_info.txt
apps/build_outputs/Listing13_12.c/: build_info.txt
cmake/stm32cubemx/: CMakeLists.txt
examples-stm32/examples/: 01_basic_image_creation.cpp  02_color_conversion.cpp  03_channel_management.cpp  README.md
patches/: tflite-softmax-float.patch
real working ov5640/: stm32_ov5640.c
snippet_backups/: main.c.20260228_214715.backup  main.c.20260228_214729.backup  main.cpp.20260228_214716.backup
(+827 files in other folders)
